src/objects/CardLock__c.object
<CustomObject>
    <fields>
        <fullName>Automatic_Monitoring_System_AMS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Automatic Monitoring System (AMS)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Reader__c</fullName>
        <label>Card Reader</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autogas</fullName>
                </value>
                <value>
                    <fullName>CCSI Tech</fullName>
                </value>
                <value>
                    <fullName>E-Fueling</fullName>
                </value>
                <value>
                    <fullName>Gasboy</fullName>
                </value>
                <value>
                    <fullName>Petrovend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gallons_Month__c</fullName>
        <label>Gallons (Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>CardLock</relationshipLabel>
        <relationshipName>CardLock</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autogas</fullName>
                </value>
                <value>
                    <fullName>CCSI Tech</fullName>
                </value>
                <value>
                    <fullName>E-Fueling</fullName>
                </value>
                <value>
                    <fullName>Gasboy</fullName>
                </value>
                <value>
                    <fullName>Petrovend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transactions_Month__c</fullName>
        <label>Transactions (Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Sites__c</fullName>
        <label># of Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CardLock</label>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>CardLock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CardLock</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>